# mtp2

./: .gitignore  README.md
img-cli/: Cargo.toml
img-cli/src/: main.rs
server/: go.mod  main.go
ui/: package-lock.json  vite.config.ts
ui/src/: App.tsx  index.css
ui/src/components/: Gallery.tsx  ImageOverlay.tsx  Thumbnail.tsx  index.ts
